--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ PORT=8080
 MONGO_URL=mongodb+srv://JustAnotherNoob:EaT3M8npz32eEUJw@cluster0.ellbwl0.mongodb.net/ecommerce?retryWrites=true&w=majority
 ADMIN_NAME=adminCoder@coder.com
 ADMIN_PASSWORD=adminCod3r123
+BACKEND_TYPE=Productive
 SESSION_SECRET=secret
